--- a/style.css
+++ b/style.css
@@ -43,6 +43,7 @@ nav li{
 }
 
 h1{
+    margin-top: 5rem;
     text-align: center;
     font-family: 'Raleway', sans-serif;
     font-size: 3rem;
@@ -56,6 +57,8 @@ h1{
     justify-content: space-around;
     font-family: 'Raleway', sans-serif;
     transition: 2s;
+    border-radius: 1rem;
+    box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.25);
 }
 
 .foodItem:hover{
@@ -82,6 +85,8 @@ h1{
     align-self: center;
     width: 100%;
     height: auto;
+    border: solid 0.4rem;
+    border-color: white;
 }
 
 .foodItem > .title {
